# StefanOctavia-ProiectOOP

./: CMakeLists.txt  Entitate.cpp  EntitateException.cpp  EntitateException.h  Furnizor.cpp  Furnizor.h  GestionareFarmacieException.cpp  Medic.cpp  Medic.h  Medicament.cpp  Medicament.h  Pacient.cpp  Pacient.h  README.md  main.cpp
